syntax = "proto3";
option go_package = "common/pb_msg";
package pb_msg;
import "common/pb_msg/common.proto";
import "common/pb_msg/ai_vertex_weight.proto";
import "common/pb_msg/ai_node.proto";
// ---------------------------------------------------------------------------
/** @brief A single bone of a mesh.
 *
 *  A bone has a name by which it can be found in the frame hierarchy and by
 *  which it can be addressed by animations. In addition it has a number of
 *  influences on vertices, and a matrix relating the mesh position to the
 *  position of the bone at the time of binding.
 */
message AiBone {
  /**
* The name of the bone.
*/
  string Name = 1;

  /**
* The number of vertices affected by this bone.
* The maximum value for this member is #AI_MAX_BONE_WEIGHTS.
*/
  uint32 NumWeights = 2;


  /**
* The bone armature node - used for skeleton conversion
* you must enable aiProcess_PopulateArmatureData to populate this
*/
  repeated AiNode  Armature = 3;

  /**
* The bone node in the scene - used for skeleton conversion
* you must enable aiProcess_PopulateArmatureData to populate this
*/
  repeated AiNode  Node = 4;
  /**
* The influence weights of this bone, by vertex index.
*/
  repeated  AiVertexWeight Weights = 5;

  /**
* Matrix that transforms from mesh space to bone space in bind pose.
*
* This matrix describes the position of the mesh
* in the local space of this bone when the skeleton was bound.
* Thus it can be used directly to determine a desired vertex position,
* given the world-space transform of the bone when animated,
* and the position of the vertex in mesh space.
*
* It is sometimes called an inverse-bind matrix,
* or inverse bind pose matrix.
*/
  AiMatrix4x4 OffsetMatrix = 6;
}
